Update gitignore for nodejs stuff
Signed-off-by: Rohan Mathur <rohan@rmathur.com>

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ WhiteboardJS/gen/*
 RemoteSystemsTempFiles
 android-support-v7-appcompat
 .metadata
+
+#nodejs stuff
+nodejs_boilerplate/.idea/*
+nodejs_boilerplate/.build/*
+nodejs_boilerplate/node_modules/*
+*.iml
